--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Arkin Solomon",
   "license": "MIT",
   "dependencies": {
+    "babel-polyfill": "^6.26.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
